--- a/social-web-app/src/App.css
+++ b/social-web-app/src/App.css
@@ -44,6 +44,23 @@
 .employees-in-office {
   width: 30%;
   text-align: center;
+  position: fixed;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-top: -850px;
+}
+
+.modal_content {
+  background-color: white;
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  width: 40%;
+  padding: 40px;
+  border-radius: 5px;
+  border: 2px solid #2364bd;
 }
 
 .content-table {
